apps/production/vaultwarden-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  hostnames:
    - vaultwarden.passer.home.arpa
